<resources>
    <string name="app_name">Spot2D</string>
    <string name="password_hint">Password</string>
    <string name="login_hint">Login</string>
    <string name="url_hint">http://</string>
    <string name="phone_text">+38 093 466 1265</string>
    <string name="support_text">Телефонная поддержка</string>
    <string name="login_button_caption">войти</string>
    <string name="logo_description">Логотип</string>
    <string name="header_text">ШАБЛОНЫ ОТЧЕТОВ</string>
</resources>
