<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ua.cn.gmoby.spot2d.MainActivity">
        <RelativeLayout
            android:id="@+id/logoLayout"
            android:layout_weight="0.35"
            android:layout_height="0dp"
            android:layout_width="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LogImageView"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo_description" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/buttonLayout"
            android:layout_weight="0.55"
            android:layout_height="0dp"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginEditText"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="text"
                android:hint="@string/login_hint"
                android:layout_marginBottom="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/passwordEditTex"
                android:layout_alignLeft="@+id/loginEditText"
                android:layout_alignStart="@+id/loginEditText"
                android:layout_alignRight="@+id/loginEditText"
                android:layout_alignEnd="@+id/loginEditText"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:layout_below="@+id/loginEditText"
                android:layout_marginBottom="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/urlEditText"
                android:hint="@string/url_hint"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/passwordEditTex"
                android:layout_alignLeft="@+id/passwordEditTex"
                android:layout_alignStart="@+id/passwordEditTex"
                android:layout_marginBottom="25dp" />

            <LinearLayout
                android:id="@+id/infoLayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight=".50"
                    android:text="@string/support_text"
                    android:id="@+id/supportTextView"
                    android:textSize="16sp"
                    android:textIsSelectable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/phone_text"
                    android:id="@+id/phoneTextView"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_caption"
                android:layout_below="@+id/urlEditText"
                android:layout_alignLeft="@+id/urlEditText"
                android:layout_alignStart="@+id/urlEditText"
                android:layout_alignRight="@+id/passwordEditTex"
                android:layout_alignEnd="@+id/passwordEditTex"
                android:id="@+id/loginButton" />

        </RelativeLayout>
</LinearLayout>
